added a css file and one item into the list

--- a/lab1.html
+++ b/lab1.html
@@ -6,13 +6,26 @@
     <title>SE 3316 Lab 1</title>
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 
 <body>
     <!-- Place your content here -->
     <h1>SE 3316 Lab 1</h1>
-    <p>Hello World!</p>
+    <p>List of Countries</p>
+    <ul class="main-ul">
+        <li>
+            <img src="country_flags\ad.png" alt="Andorra flag">
+            <ul class="sub-ul">
+                <li><b>Name:</b> Andorra</li>
+                <li><b>Currency:</b> Euro (€)</li>
+                <li><b>Regions:</b> Andorra la Vella, Canillo, Encamp, Escaldes-Engordany, La Massana, Ordino, Sant
+                    Julià de
+                    Lòria</li>
+            </ul>
+        </li>
+
+    </ul>
 
     <!-- Embedded JavaScript go here -->
 </body>
