added wikipedia links to the current countries

--- a/lab1.html
+++ b/lab1.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <title>SE 3316 Lab 1</title>
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Lab 1">
+    <meta name="author" content="Nikita Levin">
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 
@@ -22,6 +22,17 @@
                 <li><b>Regions:</b> Andorra la Vella, Canillo, Encamp, Escaldes-Engordany, La Massana, Ordino, Sant
                     Julià de
                     Lòria</li>
+                <a href="https://en.wikipedia.org/wiki/Andorra">Andorra's Wikipedia Page</a>
+            </ul>
+        </li>
+        <li>
+            <img src="country_flags\au.png" alt="Australia flag">
+            <ul class="sub-ul">
+                <li><b>Name:</b> Australia</li>
+                <li><b>Currency:</b> Australian Dollar ($)</li>
+                <li><b>States:</b> New South Wales, Victoria, Queensland, Western Australia, South Australia, Tasmania
+                </li>
+                <a href="https://en.wikipedia.org/wiki/Australia">Australia's Wikipedia Page</a>
             </ul>
         </li>
 
