--- a/lab1.html
+++ b/lab1.html
@@ -13,6 +13,14 @@
     <!-- Place your content here -->
     <h1>SE 3316 Lab 1</h1>
     <p>List of Countries</p>
+    <div class="search-bars">
+        <form class="search-form">
+            <input type="text" placeholder="Search By Country">
+            <button type="submit">Search</button>
+            <input type="text" placeholder="Search By Currency Code">
+            <button type="submit">Search</button>
+        </form>
+    </div>
     <ul class="main-ul">
         <li>
             <img src="country_flags\ad.png" alt="Andorra flag">
