added: json file, search bars validation checks

--- a/lab1.html
+++ b/lab1.html
@@ -7,18 +7,22 @@
     <meta name="description" content="Lab 1">
     <meta name="author" content="Nikita Levin">
     <link rel="stylesheet" href="stylesheet.css">
+    <script src="script.js"></script>
 </head>
 
 <body>
-    <!-- Place your content here -->
     <h1>SE 3316 Lab 1</h1>
     <p>List of Countries</p>
     <div class="search-bars">
         <form class="search-form">
-            <input type="text" placeholder="Search By Country">
-            <button type="submit">Search</button>
-            <input type="text" placeholder="Search By Currency Code">
-            <button type="submit">Search</button>
+            <div class="input-container">
+                <input id="countryBar" type="text" placeholder="Search By Country">
+            </div>
+            <div class="or-text">OR</div>
+            <div class="input-container">
+                <input id="currencyBar" type="text" placeholder="Search By Currency Code">
+            </div>
+            <button type="submit" onclick="searchFunc()">Search</button>
         </form>
     </div>
     <ul class="main-ul">
@@ -225,8 +229,6 @@
             </ul>
         </li>
     </ul>
-
-    <!-- Embedded JavaScript go here -->
 </body>
 
 </html>
