--- a/lab1.html
+++ b/lab1.html
@@ -8,6 +8,7 @@
     <meta name="author" content="Nikita Levin">
     <link rel="stylesheet" href="stylesheet.css">
     <script src="script.js"></script>
+
 </head>
 
 <body>
@@ -30,7 +31,7 @@
             <img src="country_flags\ad.png" alt="Andorra flag">
             <ul class="sub-ul">
                 <li><b>Name:</b> Andorra</li>
-                <li><b>Currency:</b> Euro (€)</li>
+                <li><b>Currency:</b> EUR (€)</li>
                 <li><b>Regions:</b> Andorra la Vella, Canillo, Encamp, Escaldes-Engordany, La Massana, Ordino, Sant
                     Julià de
                     Lòria</li>
@@ -41,7 +42,7 @@
             <img src="country_flags\at.png" alt="Austrian flag">
             <ul class="sub-ul">
                 <li><b>Name:</b> Austria</li>
-                <li><b>Currency:</b> Euro (€)</li>
+                <li><b>Currency:</b> EUR (€)</li>
                 <li><b>Regions:</b> Vorarlberg, Tirol, Salzburg, Upper Austria, Lower Austria, Vienna, Styria, Carinthia, Burgenland
                 </li>
                 <a href="https://en.wikipedia.org/wiki/Austria">Austria's Wikipedia Page</a>
@@ -51,7 +52,7 @@
             <img src="country_flags\au.png" alt="Australia flag">
             <ul class="sub-ul">
                 <li><b>Name:</b> Australia</li>
-                <li><b>Currency:</b> Australian Dollar ($)</li>
+                <li><b>Currency:</b> AUD ($)</li>
                 <li><b>States:</b> New South Wales, Victoria, Queensland, Western Australia, South Australia, Tasmania
                 </li>
                 <a href="https://en.wikipedia.org/wiki/Australia">Australia's Wikipedia Page</a>
@@ -61,7 +62,7 @@
             <img src="country_flags\be.png" alt="Belgium flag">
             <ul class="sub-ul">
                 <li><b>Name:</b> Belgium</li>
-                <li><b>Currency:</b> Euro (€)</li>
+                <li><b>Currency:</b> EUR (€)</li>
                 <li><b>Regions:</b> Flemish, Brussels-Capital, Walloon 
                 </li>
                 <a href="https://en.wikipedia.org/wiki/Belgium">Belgium's Wikipedia Page</a>
@@ -71,7 +72,7 @@
             <img src="country_flags\bg.png" alt="Bulgaria flag">
             <ul class="sub-ul">
                 <li><b>Name:</b> Bulgaria</li>
-                <li><b>Currency:</b> Lev (Лв.)</li>
+                <li><b>Currency:</b> BGN (Лв.)</li>
                 <li><b>Provinces:</b> Montana (Mihailovgrad), Lovech, Razgrad, Varna, Burgas, Haskovo, Plovdiv, Sofia Province, Sofia City
                 </li>
                 <a href="https://en.wikipedia.org/wiki/Bulgaria">Bulgaria's Wikipedia Page</a>
@@ -81,7 +82,7 @@
             <img src="country_flags\ca.png" alt="Canada flag">
             <ul class="sub-ul">
                 <li><b>Name:</b> Canada</li>
-                <li><b>Currency:</b> Canadian Dollar ($)</li>
+                <li><b>Currency:</b> CAD ($)</li>
                 <li><b>Provinces:</b> Ontario, Saskatchewan, Alberta, Manitoba, British Columbia, Northwest Territories, Nova Scotia, Newfoundland and Labrador, New Brunswick, Prince Edward Island, Nunavut, Quebec, Yukon
                 </li>
                 <a href="https://en.wikipedia.org/wiki/Canada">Canada's Wikipedia Page</a>
@@ -91,7 +92,7 @@
             <img src="country_flags\ch.png" alt="Switzerland flag">
             <ul class="sub-ul">
                 <li><b>Name:</b> Switzerland</li>
-                <li><b>Currency:</b> Swiss Franc (CHf)</li>
+                <li><b>Currency:</b> CHF (CHf)</li>
                 <li><b>Regions:</b> Ticino, Valais, Bern, Grisons, Vaud, Aargau, Thurgau, Jura, Uri, Solothurn, Basel-landschaft, Glarus, Schwyz, Appenzell Ausserrhoden, Obwalden, Appenzell Innerrhoden, Basel City, Nidwalden, Central Switzerland, Swiss Alps, Bernese Oberland, Fribourg, Zug, Eastern Switzerland
                 </li>
                 <a href="https://en.wikipedia.org/wiki/Switzerland">Switzerland's Wikipedia Page</a>
@@ -101,7 +102,7 @@
             <img src="country_flags\ci.png" alt="Ivory Coast flag">
             <ul class="sub-ul">
                 <li><b>Name:</b> Ivory Coast</li>
-                <li><b>Currency:</b> West African CFA franc (CFA)</li>
+                <li><b>Currency:</b> XOF (CFA)</li>
                 <li><b>Regions:</b> Bas-Sassandra District, Lagunes, Denguele, Savanes, Haut-Sassandra, Comoé, Lacs, Sassandra-Marahoué District, Woroba, Montagnes, Zanzan, Sud-Comoé, Béller Region, Vallee du Bandama, 
                     Gbêkê, Folon Region, Béré Region, Formager
                 </li>
@@ -112,7 +113,7 @@
             <img src="country_flags\cn.png" alt="China flag">
             <ul class="sub-ul">
                 <li><b>Name:</b> China</li>
-                <li><b>Currency:</b> Chinese Yuan (¥)</li>
+                <li><b>Currency:</b> CNY (¥)</li>
                 <li><b>Provinces:</b> Anhui, Fujian, Guangdong, Gansu, Guizhou, Henan, Hubei, Hebei,  Hainan, Heilongjiang, Hunan, Jilin, Jiangsu, Jiangxi, Liaoning, Qinghai, Sichuan, Shandong, Shaanxi, Shanxi, Yunnan, Zhejiang
                 </li>
                 <a href="https://en.wikipedia.org/wiki/China">China's Wikipedia Page</a>
@@ -122,7 +123,7 @@
             <img src="country_flags\cz.png" alt="Czechia flag">
             <ul class="sub-ul">
                 <li><b>Name:</b> Czechia</li>
-                <li><b>Currency:</b> Czech Koruna (Kč)</li>
+                <li><b>Currency:</b> CZK (Kč)</li>
                 <li><b>Regions:</b> Central Bohemia, South Bohemia, Plzeň, Karlovy Vary, Ústí nad Labem, Liberec, Hradec Králové, Pardubice, Vysočina, South Moravian, Olomouc, Zlín, Moravian-Silesia
                 </li>
                 <a href="https://en.wikipedia.org/wiki/Czech_Republic">Czechia's Wikipedia Page</a>
@@ -132,7 +133,7 @@
             <img src="country_flags\de.png" alt="Germany flag">
             <ul class="sub-ul">
                 <li><b>Name:</b> Germany</li>
-                <li><b>Currency:</b> Euro (€)</li>
+                <li><b>Currency:</b> EUR (€)</li>
                 <li><b>Regions:</b> Baden-Württemberg, Bavaria, Berlin, Brandenburg, Bremen, Hamburg, Hesse, Lower Saxony, Mecklenburg-Vorpommern, North Rhine-Westphalia, Rhineland-Palatinate, Saarland, Saxony-Anhalt, Schleswig-Holstein, Thuringia
                 </li>
                 <a href="https://en.wikipedia.org/wiki/Germany">Germany's Wikipedia Page</a>
@@ -142,7 +143,7 @@
             <img src="country_flags\dk.png" alt="Denmark flag">
             <ul class="sub-ul">
                 <li><b>Name:</b> Denmark</li>
-                <li><b>Currency:</b> Danish Krone (kr.)</li>
+                <li><b>Currency:</b> DKK (kr.)</li>
                 <li><b>Regions:</b> North Denmark, Central Denmark, Southern Denmark, Zealand, Capital Region of Denmark
                 </li>
                 <a href="https://en.wikipedia.org/wiki/Denmark">Denmark's Wikipedia Page</a>
@@ -152,7 +153,7 @@
             <img src="country_flags\gr.png" alt="Greece flag">
             <ul class="sub-ul">
                 <li><b>Name:</b> Greece</li>
-                <li><b>Currency:</b> Euro (€)</li>
+                <li><b>Currency:</b> EUR (€)</li>
                 <li><b>Regions:</b> Crete, Peloponnese, Central Greece, Ionian Islands, Dodecanese, Epirus, Attica, Thessaly, Chalcidice, Aegean Sea, Thrace, Western Greece,  Eastern Macedonia and Thrace, Macedonia, Central Macedonia, Cylades, South Aegean, North Aegian, Aegean Islands, Achaea, Arcadia, Sporades, Western Macedonia, Saronic Islands
                 </li>
                 <a href="https://en.wikipedia.org/wiki/Greece">Greece's Wikipedia Page</a>
@@ -162,7 +163,7 @@
             <img src="country_flags\il.png" alt="Israel flag">
             <ul class="sub-ul">
                 <li><b>Name:</b> Israel</li>
-                <li><b>Currency:</b> Israeli New Shekel (₪)</li>
+                <li><b>Currency:</b> ILS (₪)</li>
                 <li><b>States:</b> Northern District, Southern District, Negev, Central District, Jerusalem District, Haifa District, Tel Aviv District, Jordan Rift Valley, Judea and Samaria Area
                 </li>
                 <a href="https://en.wikipedia.org/wiki/Israel">Israel's Wikipedia Page</a>
@@ -172,7 +173,7 @@
             <img src="country_flags\in.png" alt="India flag">
             <ul class="sub-ul">
                 <li><b>Name:</b> India</li>
-                <li><b>Currency:</b> Indian Rupee (₹)</li>
+                <li><b>Currency:</b> INR (₹)</li>
                 <li><b>Regions:</b> Andhra Pradesh, Himachal Pradesh, Rajathan, Arunachal Pradesh, West Bengal, Kashmir, Kerala, Uttar Pradesh, Gujarat, Punjab, South India, Sikkim, Tamil Nadu, Uttarakhand, Haryana, West India, Ladakh, Northeast India, Jharkhand, North India, East India, Jammu and Kashmir, Central India, Madhya Pradesh
                 </li>
                 <a href="https://en.wikipedia.org/wiki/India">India's Wikipedia Page</a>
@@ -182,7 +183,7 @@
             <img src="country_flags\it.png" alt="Italy flag">
             <ul class="sub-ul">
                 <li><b>Name:</b> Italy</li>
-                <li><b>Currency:</b> Euro (€)</li>
+                <li><b>Currency:</b> EUR (€)</li>
                 <li><b>Regions:</b> Tuscany, Sicily, Umbria, Emilia-Romanga, Puglia, Piedmont, Lombardy, Calabria, Campania, Veneto, Liguria, Friuli-Venezia Giulia, Marche, Abruzzo, Sardinia, Aosta Valley, Lazio, Basilicata, Molise, Trentino-South Tyrol, Southern Italy, Northern Italy, Trentino, Dolomites
                 </li>
                 <a href="https://en.wikipedia.org/wiki/Italy">Italy's Wikipedia Page</a>
@@ -192,7 +193,7 @@
             <img src="country_flags\jp.png" alt="Japan flag">
             <ul class="sub-ul">
                 <li><b>Name:</b> Japan</li>
-                <li><b>Currency:</b> Japanese yen (¥)</li>
+                <li><b>Currency:</b> JPY (¥)</li>
                 <li><b>States:</b> Hokkaidō, Tōhoku, Kantō, Chūbu, Kansai, Chūgoku, Shikoku, Kyūshū & Okinawa
                 </li>
                 <a href="https://en.wikipedia.org/wiki/Japan">Japan's Wikipedia Page</a>
@@ -202,7 +203,7 @@
             <img src="country_flags\kr.png" alt="South Korea flag">
             <ul class="sub-ul">
                 <li><b>Name:</b> South Korea</li>
-                <li><b>Currency:</b> Korean Republic Won (₩)</li>
+                <li><b>Currency:</b> KRW (₩)</li>
                 <li><b>Provinces:</b> North Chungcheong, South Chungcheong, Gangwon, Gyeonggi, North Gyeongsang, South Gyeongsang, North Jeolla, South Jeolla, Jeju
                 </li>
                 <a href="https://en.wikipedia.org/wiki/South_Korea">South Korea's Wikipedia Page</a>
@@ -212,7 +213,7 @@
             <img src="country_flags\lb.png" alt="Lebanon flag">
             <ul class="sub-ul">
                 <li><b>Name:</b> Lebanon</li>
-                <li><b>Currency:</b> Lebanese pound (LBP)</li>
+                <li><b>Currency:</b> LBP (LBP)</li>
                 <li><b>Regions:</b> Akkar, Baalbeck-Hermel, Beirut, Bekaa, Mount Lebanon, North Lebanon, Nabatiyeh, and South Lebanon
                 </li>
                 <a href="https://en.wikipedia.org/wiki/Lebanon">Lebanon's Wikipedia Page</a>
@@ -222,7 +223,7 @@
             <img src="country_flags\sk.png" alt="Slovakia flag">
             <ul class="sub-ul">
                 <li><b>Name:</b> Slovakia</li>
-                <li><b>Currency:</b> Euro (€)</li>
+                <li><b>Currency:</b> EUR (€)</li>
                 <li><b>Regions:</b> Bratislava, Trnava, Trenčín, Nitra, Žilina, Banská Bystrica, Prešov, Košice
                 </li>
                 <a href="https://en.wikipedia.org/wiki/Slovakia">Slovakia's Wikipedia Page</a>
