final project push

--- a/lab1.html
+++ b/lab1.html
@@ -8,7 +8,6 @@
     <meta name="author" content="Nikita Levin">
     <link rel="stylesheet" href="stylesheet.css">
     <script src="script.js"></script>
-
 </head>
 
 <body>
@@ -43,7 +42,8 @@
             <ul class="sub-ul">
                 <li><b>Name:</b> Austria</li>
                 <li><b>Currency:</b> EUR (€)</li>
-                <li><b>Regions:</b> Vorarlberg, Tirol, Salzburg, Upper Austria, Lower Austria, Vienna, Styria, Carinthia, Burgenland
+                <li><b>Regions:</b> Vorarlberg, Tirol, Salzburg, Upper Austria, Lower Austria, Vienna, Styria,
+                    Carinthia, Burgenland
                 </li>
                 <a href="https://en.wikipedia.org/wiki/Austria">Austria's Wikipedia Page</a>
             </ul>
@@ -63,7 +63,7 @@
             <ul class="sub-ul">
                 <li><b>Name:</b> Belgium</li>
                 <li><b>Currency:</b> EUR (€)</li>
-                <li><b>Regions:</b> Flemish, Brussels-Capital, Walloon 
+                <li><b>Regions:</b> Flemish, Brussels-Capital, Walloon
                 </li>
                 <a href="https://en.wikipedia.org/wiki/Belgium">Belgium's Wikipedia Page</a>
             </ul>
@@ -73,7 +73,8 @@
             <ul class="sub-ul">
                 <li><b>Name:</b> Bulgaria</li>
                 <li><b>Currency:</b> BGN (Лв.)</li>
-                <li><b>Provinces:</b> Montana (Mihailovgrad), Lovech, Razgrad, Varna, Burgas, Haskovo, Plovdiv, Sofia Province, Sofia City
+                <li><b>Provinces:</b> Montana (Mihailovgrad), Lovech, Razgrad, Varna, Burgas, Haskovo, Plovdiv, Sofia
+                    Province, Sofia City
                 </li>
                 <a href="https://en.wikipedia.org/wiki/Bulgaria">Bulgaria's Wikipedia Page</a>
             </ul>
@@ -83,7 +84,8 @@
             <ul class="sub-ul">
                 <li><b>Name:</b> Canada</li>
                 <li><b>Currency:</b> CAD ($)</li>
-                <li><b>Provinces:</b> Ontario, Saskatchewan, Alberta, Manitoba, British Columbia, Northwest Territories, Nova Scotia, Newfoundland and Labrador, New Brunswick, Prince Edward Island, Nunavut, Quebec, Yukon
+                <li><b>Provinces:</b> Ontario, Saskatchewan, Alberta, Manitoba, British Columbia, Northwest Territories,
+                    Nova Scotia, Newfoundland and Labrador, New Brunswick, Prince Edward Island, Nunavut, Quebec, Yukon
                 </li>
                 <a href="https://en.wikipedia.org/wiki/Canada">Canada's Wikipedia Page</a>
             </ul>
@@ -93,7 +95,10 @@
             <ul class="sub-ul">
                 <li><b>Name:</b> Switzerland</li>
                 <li><b>Currency:</b> CHF (CHf)</li>
-                <li><b>Regions:</b> Ticino, Valais, Bern, Grisons, Vaud, Aargau, Thurgau, Jura, Uri, Solothurn, Basel-landschaft, Glarus, Schwyz, Appenzell Ausserrhoden, Obwalden, Appenzell Innerrhoden, Basel City, Nidwalden, Central Switzerland, Swiss Alps, Bernese Oberland, Fribourg, Zug, Eastern Switzerland
+                <li><b>Regions:</b> Ticino, Valais, Bern, Grisons, Vaud, Aargau, Thurgau, Jura, Uri, Solothurn,
+                    Basel-landschaft, Glarus, Schwyz, Appenzell Ausserrhoden, Obwalden, Appenzell Innerrhoden, Basel
+                    City, Nidwalden, Central Switzerland, Swiss Alps, Bernese Oberland, Fribourg, Zug, Eastern
+                    Switzerland
                 </li>
                 <a href="https://en.wikipedia.org/wiki/Switzerland">Switzerland's Wikipedia Page</a>
             </ul>
@@ -103,7 +108,8 @@
             <ul class="sub-ul">
                 <li><b>Name:</b> Ivory Coast</li>
                 <li><b>Currency:</b> XOF (CFA)</li>
-                <li><b>Regions:</b> Bas-Sassandra District, Lagunes, Denguele, Savanes, Haut-Sassandra, Comoé, Lacs, Sassandra-Marahoué District, Woroba, Montagnes, Zanzan, Sud-Comoé, Béller Region, Vallee du Bandama, 
+                <li><b>Regions:</b> Bas-Sassandra District, Lagunes, Denguele, Savanes, Haut-Sassandra, Comoé, Lacs,
+                    Sassandra-Marahoué District, Woroba, Montagnes, Zanzan, Sud-Comoé, Béller Region, Vallee du Bandama,
                     Gbêkê, Folon Region, Béré Region, Formager
                 </li>
                 <a href="https://en.wikipedia.org/wiki/Ivory_Coast">Ivory Coast's Wikipedia Page</a>
@@ -114,7 +120,9 @@
             <ul class="sub-ul">
                 <li><b>Name:</b> China</li>
                 <li><b>Currency:</b> CNY (¥)</li>
-                <li><b>Provinces:</b> Anhui, Fujian, Guangdong, Gansu, Guizhou, Henan, Hubei, Hebei,  Hainan, Heilongjiang, Hunan, Jilin, Jiangsu, Jiangxi, Liaoning, Qinghai, Sichuan, Shandong, Shaanxi, Shanxi, Yunnan, Zhejiang
+                <li><b>Provinces:</b> Anhui, Fujian, Guangdong, Gansu, Guizhou, Henan, Hubei, Hebei, Hainan,
+                    Heilongjiang, Hunan, Jilin, Jiangsu, Jiangxi, Liaoning, Qinghai, Sichuan, Shandong, Shaanxi, Shanxi,
+                    Yunnan, Zhejiang
                 </li>
                 <a href="https://en.wikipedia.org/wiki/China">China's Wikipedia Page</a>
             </ul>
@@ -124,7 +132,8 @@
             <ul class="sub-ul">
                 <li><b>Name:</b> Czechia</li>
                 <li><b>Currency:</b> CZK (Kč)</li>
-                <li><b>Regions:</b> Central Bohemia, South Bohemia, Plzeň, Karlovy Vary, Ústí nad Labem, Liberec, Hradec Králové, Pardubice, Vysočina, South Moravian, Olomouc, Zlín, Moravian-Silesia
+                <li><b>Regions:</b> Central Bohemia, South Bohemia, Plzeň, Karlovy Vary, Ústí nad Labem, Liberec, Hradec
+                    Králové, Pardubice, Vysočina, South Moravian, Olomouc, Zlín, Moravian-Silesia
                 </li>
                 <a href="https://en.wikipedia.org/wiki/Czech_Republic">Czechia's Wikipedia Page</a>
             </ul>
@@ -134,7 +143,9 @@
             <ul class="sub-ul">
                 <li><b>Name:</b> Germany</li>
                 <li><b>Currency:</b> EUR (€)</li>
-                <li><b>Regions:</b> Baden-Württemberg, Bavaria, Berlin, Brandenburg, Bremen, Hamburg, Hesse, Lower Saxony, Mecklenburg-Vorpommern, North Rhine-Westphalia, Rhineland-Palatinate, Saarland, Saxony-Anhalt, Schleswig-Holstein, Thuringia
+                <li><b>Regions:</b> Baden-Württemberg, Bavaria, Berlin, Brandenburg, Bremen, Hamburg, Hesse, Lower
+                    Saxony, Mecklenburg-Vorpommern, North Rhine-Westphalia, Rhineland-Palatinate, Saarland,
+                    Saxony-Anhalt, Schleswig-Holstein, Thuringia
                 </li>
                 <a href="https://en.wikipedia.org/wiki/Germany">Germany's Wikipedia Page</a>
             </ul>
@@ -154,7 +165,10 @@
             <ul class="sub-ul">
                 <li><b>Name:</b> Greece</li>
                 <li><b>Currency:</b> EUR (€)</li>
-                <li><b>Regions:</b> Crete, Peloponnese, Central Greece, Ionian Islands, Dodecanese, Epirus, Attica, Thessaly, Chalcidice, Aegean Sea, Thrace, Western Greece,  Eastern Macedonia and Thrace, Macedonia, Central Macedonia, Cylades, South Aegean, North Aegian, Aegean Islands, Achaea, Arcadia, Sporades, Western Macedonia, Saronic Islands
+                <li><b>Regions:</b> Crete, Peloponnese, Central Greece, Ionian Islands, Dodecanese, Epirus, Attica,
+                    Thessaly, Chalcidice, Aegean Sea, Thrace, Western Greece, Eastern Macedonia and Thrace, Macedonia,
+                    Central Macedonia, Cylades, South Aegean, North Aegian, Aegean Islands, Achaea, Arcadia, Sporades,
+                    Western Macedonia, Saronic Islands
                 </li>
                 <a href="https://en.wikipedia.org/wiki/Greece">Greece's Wikipedia Page</a>
             </ul>
@@ -164,7 +178,8 @@
             <ul class="sub-ul">
                 <li><b>Name:</b> Israel</li>
                 <li><b>Currency:</b> ILS (₪)</li>
-                <li><b>States:</b> Northern District, Southern District, Negev, Central District, Jerusalem District, Haifa District, Tel Aviv District, Jordan Rift Valley, Judea and Samaria Area
+                <li><b>States:</b> Northern District, Southern District, Negev, Central District, Jerusalem District,
+                    Haifa District, Tel Aviv District, Jordan Rift Valley, Judea and Samaria Area
                 </li>
                 <a href="https://en.wikipedia.org/wiki/Israel">Israel's Wikipedia Page</a>
             </ul>
@@ -174,7 +189,10 @@
             <ul class="sub-ul">
                 <li><b>Name:</b> India</li>
                 <li><b>Currency:</b> INR (₹)</li>
-                <li><b>Regions:</b> Andhra Pradesh, Himachal Pradesh, Rajathan, Arunachal Pradesh, West Bengal, Kashmir, Kerala, Uttar Pradesh, Gujarat, Punjab, South India, Sikkim, Tamil Nadu, Uttarakhand, Haryana, West India, Ladakh, Northeast India, Jharkhand, North India, East India, Jammu and Kashmir, Central India, Madhya Pradesh
+                <li><b>Regions:</b> Andhra Pradesh, Himachal Pradesh, Rajathan, Arunachal Pradesh, West Bengal, Kashmir,
+                    Kerala, Uttar Pradesh, Gujarat, Punjab, South India, Sikkim, Tamil Nadu, Uttarakhand, Haryana, West
+                    India, Ladakh, Northeast India, Jharkhand, North India, East India, Jammu and Kashmir, Central
+                    India, Madhya Pradesh
                 </li>
                 <a href="https://en.wikipedia.org/wiki/India">India's Wikipedia Page</a>
             </ul>
@@ -184,7 +202,9 @@
             <ul class="sub-ul">
                 <li><b>Name:</b> Italy</li>
                 <li><b>Currency:</b> EUR (€)</li>
-                <li><b>Regions:</b> Tuscany, Sicily, Umbria, Emilia-Romanga, Puglia, Piedmont, Lombardy, Calabria, Campania, Veneto, Liguria, Friuli-Venezia Giulia, Marche, Abruzzo, Sardinia, Aosta Valley, Lazio, Basilicata, Molise, Trentino-South Tyrol, Southern Italy, Northern Italy, Trentino, Dolomites
+                <li><b>Regions:</b> Tuscany, Sicily, Umbria, Emilia-Romanga, Puglia, Piedmont, Lombardy, Calabria,
+                    Campania, Veneto, Liguria, Friuli-Venezia Giulia, Marche, Abruzzo, Sardinia, Aosta Valley, Lazio,
+                    Basilicata, Molise, Trentino-South Tyrol, Southern Italy, Northern Italy, Trentino, Dolomites
                 </li>
                 <a href="https://en.wikipedia.org/wiki/Italy">Italy's Wikipedia Page</a>
             </ul>
@@ -204,7 +224,8 @@
             <ul class="sub-ul">
                 <li><b>Name:</b> South Korea</li>
                 <li><b>Currency:</b> KRW (₩)</li>
-                <li><b>Provinces:</b> North Chungcheong, South Chungcheong, Gangwon, Gyeonggi, North Gyeongsang, South Gyeongsang, North Jeolla, South Jeolla, Jeju
+                <li><b>Provinces:</b> North Chungcheong, South Chungcheong, Gangwon, Gyeonggi, North Gyeongsang, South
+                    Gyeongsang, North Jeolla, South Jeolla, Jeju
                 </li>
                 <a href="https://en.wikipedia.org/wiki/South_Korea">South Korea's Wikipedia Page</a>
             </ul>
@@ -214,7 +235,8 @@
             <ul class="sub-ul">
                 <li><b>Name:</b> Lebanon</li>
                 <li><b>Currency:</b> LBP (LBP)</li>
-                <li><b>Regions:</b> Akkar, Baalbeck-Hermel, Beirut, Bekaa, Mount Lebanon, North Lebanon, Nabatiyeh, and South Lebanon
+                <li><b>Regions:</b> Akkar, Baalbeck-Hermel, Beirut, Bekaa, Mount Lebanon, North Lebanon, Nabatiyeh, and
+                    South Lebanon
                 </li>
                 <a href="https://en.wikipedia.org/wiki/Lebanon">Lebanon's Wikipedia Page</a>
             </ul>
