--- a/lab1.html
+++ b/lab1.html
@@ -25,6 +25,12 @@
             <button type="submit" onclick="searchFunc()">Search</button>
         </form>
     </div>
+    <div class="search-results">
+        <h2>Search Results</h2>
+        <ul class="search-results-list">
+
+        </ul>
+    </div>
     <ul class="main-ul">
         <li>
             <img src="country_flags\ad.png" alt="Andorra flag">
