added search box checks for currency and country

--- a/lab1.html
+++ b/lab1.html
@@ -22,7 +22,7 @@
             <div class="input-container">
                 <input id="currencyBar" type="text" placeholder="Search By Currency Code">
             </div>
-            <button type="submit" onclick="searchFunc()">Search</button>
+            <button type="submit" onclick="searchUpdate()">Search</button>
         </form>
     </div>
     <div class="search-results">
