changed empty boxes code, updated the for loop

--- a/lab1.html
+++ b/lab1.html
@@ -25,7 +25,7 @@
             <button type="submit" onclick="searchUpdate()">Search</button>
         </form>
     </div>
-    <div class="search-results">
+    <div class="search-results" style="display: none;">
         <h2>Search Results</h2>
         <ul class="search-results-list">
 
