--- a/lab1.html
+++ b/lab1.html
@@ -22,10 +22,9 @@
             <div class="input-container">
                 <input id="currencyBar" type="text" placeholder="Search By Currency Code">
             </div>
-            <button type="submit">Search</button>
         </form>
     </div>
-    <div class="search-results">
+    <div class="search-results" style="display: none;">
         <h2>Search Results</h2>
         <ul class="search-results-list"></ul>
     </div>
